# Arxiv-search

./: .dockerignore  .gitignore  Dockerfile.streamlit  README.md  SUMMARY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
data/: README.md
data/results/: eval_test_final.jsonl
docs/: SUMMARY.md
docs/eval/: labeling_guide.md  query_labels_2026-06-19.jsonl
docs/plans/: 02_retrieval_system.md  03_evaluation_protocol.md  06_final_step.md  README.md
docs/reports/: README.md  labeling_candidates_2026-06-19.md  manual_testing_guide.md  (+1 more)
eval/: labeling_guide.md  query_labels_2026-06-19.jsonl  query_labels_template.jsonl
plans/: 01_plan_and_timeline.md  04_generation_evaluation.md  05_deployment_and_monitoring.md  06_final_step.md
reports/: README.md  data_card_2026-06-19.md  eval_test_final.jsonl  eval_test_generation.jsonl  eval_test_retrieval_only.jsonl  failure_analysis_2026-06-20.md  progress_2026-06-19.md  retrieval_comparison.md
scripts/: auto_label.py  build_chunks.py  build_data_card.py  collect_arxiv.py  generate_labeling_candidates.py  index_qdrant.py  label_status.py  log_results_to_wandb.py  query_arxiv.py  run_api.py  run_chunking_experiment.py  run_embedding_experiment.py  run_generation_evaluation.py  run_reranking_experiment.py  run_retrieval_comparison.py  search_corpus.py  search_qdrant.py  serve_labeler.py  smoke_models.py  validate_labels.py
tests/: test_annotation.py  test_api.py  test_chunking.py  test_labels.py  test_metrics.py  test_retrieval.py  test_serving.py
ui/: app.py  dashboard.py
(+23 files in other folders)
