[project]
name = "arxiv-rag"
version = "0.1.0"
description = "Evaluation-first RAG system over arXiv AI/ML paper abstracts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.8.0",
    "qdrant-client>=1.10.0",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.66.0",
    "uvicorn>=0.30.0",
    "wandb>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
